fixing minor problem on mobile screen

--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ nav {
     font-size: 14px;
     background-color: #2da7df;
     line-height: 2em;
-    width: 1000px;
+    width: 1500px;
     position:absolute;
     left:0;
     top:0;
